--- a/prepper-frontend/src/app.html
+++ b/prepper-frontend/src/app.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Prepper - Meal Prepping made simple" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
 		<title>Prepper</title>
 		%sveltekit.head%
 	</head>
